2001-04-17  Jon K Hellan  <hellan@acm.org>

	* configure.in: Fix typo

2001-04-16  Jody Goldberg <jgoldberg@home.com>

	* configure.in : bump GAL version reqs.

	* src/workbook-format-toolbar.c (workbook_create_format_toolbar) :
	  Jump to updated interface.  Partially fix the shared group problems.

2001-04-15  Almer S. Tigelaar  <almer@gnome.org>

	* src/item-grid.c : Within all functions
	where the ItemGrid is a variable, s/item_grid/ig,
	s/grid/ig.

2001-04-15  Jody Goldberg <jgoldberg@home.com>

	* src/item-grid.c (item_grid_draw) : Hide merged cells.
	(item_grid_draw_merged_range) : calculate the size the same way we do
	  it in cell_draw.

	* src/workbook-control-gui.c (wbcg_finish_editing) : new virtual
	(workbook_control_gui_ctor_class) : connect it here.
	(wbcg_sheet_remove_all) : be sure we are no longer editing.

	* src/workbook-control-priv.h : new virtual.
	* src/workbook-control.c : ditto.
	* src/workbook-control.h : ditto.

	* src/colrow.c (colrow_visibility) : One last potential NULL.

	* src/graph-vector.c : some portability fixes.

2001-04-15  Almer S. Tigelaar  <almer@gnome.org>

	* src/parser.y : Add detailed parser error messages.

	* src/workbook-edit.c (workbook_finish_editing) : Abort
	if the expression is invalid and return a boolean indicating
	success or failure.

	* src/expr.c (expr_parse_string): Set error message to the
	result of gnumeric_expr_parser.
	
	* src/parse-util.c (parse_error_init) : Properly initialize
	begin and end character.

	* src/gnumeric-sheet.c (gnumeric_sheet_key_mode_sheet): Don't
	change the cursor position if workbook_finish_editing failed.
	(move_cursor): Idem.

	* src/item-grid.c (item_grid_button_1): Idem.
	
2001-04-15  Almer S. Tigelaar  <almer@gnome.org>

	* src/preview-grid.c
	(preview_grid_realize) : Remove grid gc.
	(preview_grid_unrealize) : Idem.

	* src/item-grid.c
	(item_grid_realize) : Use gc.fill, gc.cell
	and gc.empty instead of fill_gc, etc.
	(item_grid_unrealize) : Idem.